--- a/views/modifier.ejs
+++ b/views/modifier.ejs
@@ -13,7 +13,7 @@
       <h1> Modifier <%= modif %> </h1>
 
         <form action="/todo/modificateur/<%= idex %>" method ="post">
-          <input id="tache" type="text" name="tache" value="<%= modif %>" autofocus >
+          <input id="tache" type="text" name="tache" value="" autofocus >
           <input type="submit" name="Modifier" value="Modifier">
         </form>
 </html>
